--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -32,7 +32,8 @@
 		i[r] ||
 		function() {
 			(i[r].q = i[r].q || []).push(arguments);
-		}), (i[r].l = 1 * new Date());
+		}),
+		(i[r].l = 1 * new Date());
 	(a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
 	a.async = 1;
 	a.src = g;
@@ -42,10 +43,10 @@
 	document,
 	'script',
 	'https://www.google-analytics.com/analytics.js',
-	'ga',
+	'ga'
 );
 
-ga('create', 'UA-48587325-5', 'auto');
+ga('create', 'UA-48587325-1', 'auto');
 ga('send', 'pageview');
 </script>
 
